# marketplace_management

./: README.md  pyproject.toml  requirements.txt
.pulumi/: .env  .gitignore  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
.pulumi/functions/: marketplaceEventsRecever.js  package.json
marketplace_management/: commands.py  hooks.py  modules.txt  poll_marketplace_events.py
marketplace_management/auth/: base.py  create_client.py  webhook_mange.py
marketplace_management/marketplace_management/: commands.py  poll_marketplace_events.py
marketplace_management/marketplace_management/doctype/marketplace_accounts/: marketplace_accounts.js  marketplace_accounts.json  marketplace_accounts.py  test_marketplace_accounts.py
marketplace_management/marketplace_management/doctype/marketplace_lazada_logs/: marketplace_lazada_logs.js  marketplace_lazada_logs.json  marketplace_lazada_logs.py  test_marketplace_lazada_logs.py
marketplace_management/marketplace_management/doctype/marketplace_management/: marketplace_management.js  marketplace_management.json  marketplace_management.py  test_marketplace_management.py
marketplace_management/marketplace_management/doctype/marketplace_shopee_logs/: marketplace_shopee_logs.js  marketplace_shopee_logs.json  marketplace_shopee_logs.py  test_marketplace_shopee_logs.py
