[project]
name = "marketplace_management"
authors = [
    { name = "zaviago", email = "nabeel@zaviago.com"}
]
description = "Marketplace managment "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["lazop-sdk"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
